# homl

./: .gitignore  01_lifesat.ipynb  02_ml_project.ipynb  03_classification.ipynb  04_training_models.ipynb  05_svm.ipynb  06_decision_trees.ipynb  07_ensemble_learning.ipynb  08_dim_reduction.ipynb  09_unsupervised.ipynb  10_neural_networks.ipynb  11_training_deep_neural_nets.ipynb  12_tensorflow_models.ipynb  13_tensorflow_data.ipynb  14_convolutional_neural_nets.ipynb  15_recurrent_neural_nets.ipynb  16_nlp.ipynb  17_autoencoders_and_gans.ipynb  18_reinforcement_learning.ipynb  19_scale_deploy.ipynb  Makefile  README.md  pyproject.toml  tensorflow_models.ipynb
